Fix z-index

--- a/app/assets/stylesheets/section/lookbooks.scss
+++ b/app/assets/stylesheets/section/lookbooks.scss
@@ -100,7 +100,7 @@ section#lookbooks {
       display: block;
       top: 10px;
       right: 0;
-      z-index: 1000;
+      z-index: 110;
     }
     div.video_description {
       display: none;
